--- a/Intro to GIS.ipynb
+++ b/Intro to GIS.ipynb
@@ -1135,6 +1135,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
@@ -1558,6 +1559,24 @@
     "# add a basemap\n",
     "ctx.add_basemap(ax)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Thank you!\n",
+    "\n",
+    "Please take a very quick survey, and let us know your thoughts on the workshop.\n",
+    "\n",
+    "https://forms.gle/nbWgNP45qCwZhLRh9\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
